2006-11-05  Matthias Wimmer <m@tthias.eu>

    * util/pointer.tcc: correct initializing of pointer in default constructor
    * util/util.h: same

2006-10-29  Matthias Wimmer  <m@tthias.eu>

    * util/util.h: new class xmlostream
    * util/xmlostream.cc: same

2006-10-21  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: even more C++: config defaults, strings
    * conn.cc: same
    * connect.cc: same
    * jadc2s.cc: same
    * jadc2s.h: same
    * util/config.cc: same
    * util/util2.h: same
    * util/str.cc: not used anymore, removing
    * util/util.h: same
    * jadc2s.h: mainly redefining the chunk_st type to keep data as a string
    * conn.cc: same
    * clients.cc: same
    * jadc2s.cc: same
    * connect.cc: same
    * util/nad.cc: nad_print() now returns resultstring as a C++ string
    * util/util.h: same

2006-10-20  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: using Glib::ustring for UTF-8 strings
    * conn.cc: same
    * connect.cc: same
    * jadc2s.cc: same
    * rate.cc: same
    * jadc2s.h: same
    * util/util2.h: same
    * util/config.cc: same
    * util/jid.cc: same
    * util/log.cc: same
    * util/nsparser.cc: same
    * util/xmlistream.cc: same

2006-10-15  Matthias Wimmer  <m@tthias.eu>

    * util/xmlistream.cc: parser to create stanza events
    * util/util2.h: same
    * util/nsparser.cc: changes to support xmlistream

2006-10-14  Matthias Wimmer  <m@tthias.eu>

    * util/nsparser.cc: subclassing xmlpp::SaxParser to get a ns-aware parser
    * util/util2.h: same

2006-10-13  Matthias Wimmer  <m@tthias.eu>

    * clients.cc: fixing problem in SASL authentication

2006-10-12  Matthias Wimmer  <m@tthias.eu>

    * jadc2s.cc: Logging the version number on startup
    * util/config.cc: using libxml++ instead of xerces
    * util/util2.h: same

2006-10-11  Matthias Wimmer  <m@tthias.eu>

    * util/config.cc: new class to access configuration
    * util/pointer.tcc: new method points_to_NULL() for pointer class